Updating render.yml

--- a/SolarCast-main/solar/render.yml
+++ b/SolarCast-main/solar/render.yml
@@ -1,5 +1,5 @@
 web:
-  - command: gunicorn -w 4 -b 0.0.0.0:$PORT app:app
+  - command: gunicorn -w 4 -b 0.0.0.0:$PORT solar.wsgi:application
     healthCheck:
       path: /healthcheck
       intervalSeconds: 10
